add dynamic content rendering, add eslint and prettier, remove unused file, refactor code adhering to eslint

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,5 +8,5 @@ html(lang="en")
         title Home Page
 
     body 
-        h1.main-header Welcome! 
+        h1.main-header Welcome, #{user}!
         a(href="/admin/users") Go to Users page
