--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,7 +7,7 @@
   <% if (users && users.length) { %>
   <ul>
     <% users.map((user) => { %>
-    <li><%= user %></li>
+    <li><%= user.name %></li>
     <% }) %>
   </ul>
   <% } else {%>
