huge refactor for admin -> users, add user id as param to new route

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -10,7 +10,6 @@
   <body>
     <div class="nav">
       <a href="/" id="<%= path === '/' ? 'active' : '' %>">Home</a>
-      <a href="/admin/users" id="<%= path === '/admin/users' ? 'active' : '' %>"
-        >Admin</a>
+      <a href="/users" id="<%= path === '/users' ? 'active' : '' %>">Users</a>
     </div>
     <div class="content">
