add getUserId static function to model, change form style and user table render

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,3 +90,11 @@ button:hover {
   background: var(--grey);
   color: var(--white);
 }
+
+form {
+  display: inline-grid;
+}
+
+form button {
+  margin-top: 10px;
+}
