add user detail page, styling and try onclick function

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="nav">
+      <h1>Simple Mailing List</h1>
       <a href="/" id="<%= path === '/' ? 'active' : '' %>">Home</a>
       <a href="/users" id="<%= path === '/users' ? 'active' : '' %>">Users</a>
     </div>
