--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,6 +74,12 @@ button:hover {
   border: 2px outset var(--light-blue);
 }
 
+.nav h1 {
+  background: none;
+  color: var(--white);
+  margin: var(--padding-user)
+}
+
 #active {
   background: var(--blue);
   border: 2px inset var(--light-blue);
@@ -95,6 +101,6 @@ form {
   display: inline-grid;
 }
 
-form button {
+form > * {
   margin-top: 10px;
 }
