--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head.ejs') %>
-<h1>Please type your user name and click submit</h1>
+<h1>Add new users to the list</h1>
 <form method="POST" action="/users">
   <label>Name</label>
   <input type="text" name="name" />
