add mailingList render and data, refactor logic, style the mailing list nav

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -12,5 +12,10 @@
       <h1>Simple Mailing List</h1>
       <a href="/" id="<%= path === '/' ? 'active' : '' %>">Home</a>
       <a href="/users" id="<%= path === '/users' ? 'active' : '' %>">Users</a>
+      <a
+        href="/mailing-list"
+        id="<%= path === '/mailing-list' ? 'active' : '' %>"
+        >Mailing List</a
+      >
     </div>
     <div class="content">
