--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,6 +64,10 @@ button:hover {
   border: 2px solid var(--grey);
 }
 
+.nav a:last-child {
+    margin-left: auto;
+}
+
 .nav a:active:hover {
   background: var(--blue);
   border: 2px inset var(--light-blue);
