populate form in user detail edit, rename getUserId to getUserById, fix redirection on Back button on user detail, rename users in users.json to be Resident Evil characters

--- a/views/includes/form.ejs
+++ b/views/includes/form.ejs
@@ -1,7 +1,11 @@
 <form method="POST" action="/users">
   <label>Name</label>
-  <input type="text" name="name" />
+  <input
+    type="text"
+    name="name"
+    value="<% if(edit && user.name){ %> <%= user.name %> <% } %>"
+  />
   <label>Email</label>
-  <input type="email" name="email" />
+  <input type="email" name="email" value="<% if(edit && user.email){ %> <%= user.email %> <% } %>" />
   <button type="submit">Submit</button>
 </form>
