--- a/views/includes/form.ejs
+++ b/views/includes/form.ejs
@@ -1,11 +1,7 @@
-<form method="POST" action="/users">
+<form method="POST" action="<% path %>">
   <label>Name</label>
-  <input
-    type="text"
-    name="name"
-    value="<% if(edit && user.name){ %> <%= user.name %> <% } %>"
-  />
+  <input type="text" name="name" value="<%= user.name %>" />
   <label>Email</label>
-  <input type="email" name="email" value="<% if(edit && user.email){ %> <%= user.email %> <% } %>" />
+  <input type="email" name="email" value="<%= user.email %>" />
   <button type="submit">Submit</button>
 </form>
