--- a/views/includes/form.ejs
+++ b/views/includes/form.ejs
@@ -3,5 +3,5 @@
   <input type="text" name="name" value="<%= user.name %>" />
   <label>Email</label>
   <input type="email" name="email" value="<%= user.email %>" />
-  <button type="submit">Submit</button>
+  <button type="submit" class='submit'>Submit</button>
 </form>
