--- a/views/users.ejs
+++ b/views/users.ejs
@@ -20,7 +20,7 @@
     <td><%= value %></td>
     <% } %> <% } %>
     <td>
-      <a href="/users/<%= user.id %>"><button>More Info</button></a>
+      <a href="/users/<%= user._id %>"><button>More Info</button></a>
     </td>
   </tr>
   <% }) %>
