--- a/views/user-detail.ejs
+++ b/views/user-detail.ejs
@@ -1,19 +1,13 @@
 <%- include('includes/head.ejs') %>
-<h1>Name: <%= user.name%></h1>
-<% Object.entries(user).map((value) => { %> <% const [key, val] = value %> <%
-if(key !== 'name' && key !== 'id'){ %>
-<p><%= `${key}: ${val}` %></p>
-<% } %> <% }) %>
+<h1>Name: <%= user.name %></h1>
+<p>Email: <%= user.email %></p>
 <hr />
 <button onclick="toggleEdit()" class="<%= edit ? 'active' : '' %>">Edit</button>
 <form action="/mailing-list" method="POST">
   <input type="hidden" name="id" value="<%= user._id %>" />
   <button type="submit">Add to Mailing List</button>
 </form>
-<form
-  action="/users/delete/<%= user._id %>"
-  method="POST"
->
+<form action="/users/delete/<%= user._id %>" method="POST">
   <input type="hidden" name="id" value="<%= user._id %>" />
   <button type="submit" onclick="deletePrompt(event)" class="delete">
     Delete
