wip adding login form

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -14,8 +14,13 @@
       <a href="/users" id="<%= path === '/users' ? 'active' : '' %>">Users</a>
       <a
         href="/mailing-list"
+        class="right"
         id="<%= path === '/mailing-list' ? 'active' : '' %>"
         >Mailing List</a
+      >
+      <a
+        href="/login"
+        >Login</a
       >
     </div>
     <div class="content">
